# avalanche-danger-level-forecast

./: .gitattributes  .gitignore  .gitmodules  Makefile  NOTES.md  README.md  environment.yaml  pyproject.toml
.secrets/: meteo_blue_api_key.txt  visual_crossing_api_key.txt
data/: README.md
data/aux/: SAIS_areaPolygons.geojson  SAIS_seasons.csv  SAIS_summits.geojson  USFS_summits.geojson  errs_summary.pkl  randomly_selected_dates.csv  stations_VisualCrossing_Scotland_subset.csv
data/aux/params/: mlp_hypertuned.csv  mlp_tuned.json  random_forest_tuned.json  softmax_tuned.json
data/processed/: SAIS_areaPolygons-delete.tsv  SAIS_areaPolygons.geojson  SAIS_dev.csv  SAIS_tabularised.csv  SAIS_test.csv  SAIS_train.csv  USFS_data.csv
data/raw/: Any_snowprofiles_1993-12-20_to_2024-04-13.csv  SAIS_Any_snowprofiles_1993-12-20_to_2024-04-13.csv  data-1729891347683.csv  data-exploration.ipynb
src/: README.md  data-exploration-hazard-levels.ipynb  data-exploration-weather.ipynb  data-exploration.ipynb  modelling.ipynb
src/utils/: data_download.py  data_transformation.py  error_metrics.py  latex.py
test/utils/: test_data_transformation.py
tex/: README.md  poster.tex  project-report.tex  references.bib  template.tex
tex/assets/snippets/: sais_size_dev.txt  sais_size_final.txt  sais_size_initial.txt  sais_size_test.txt  sais_size_train.txt  usfs_size_final.txt  weather_idependent_variable_dimension.txt
tex/assets/tables/: sais_area_breakdown.tex  sais_eval_DatasetCategory.tex  sais_eval_development.tex  sais_eval_test.tex  sais_eval_training.tex  (+9 more)
