[tool.poetry]
name = "avalanche-danger-level-forecast"
version = "0.1.0"
description = "Avalanche danger level forecasting project as part of Stanford's CS229 course requirements"
authors = ["Witold <gawlikowicz@pm.me>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
