[tool.poetry]
name = "avalanche-danger-level-forecast"
version = "0.1.0"
description = "Avalanche danger level forecasting project as part of Stanford's CS229 course requirements"
authors = ["Witold <gawlikowicz@pm.me>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry2conda]
name = "avalanche-danger-level-forecast"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
torch = "^2.5.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
geopandas = "^1.0.1"
contextily = "^1.6.2"
meteostat = "^1.6.8"
shapely = "^2.0.6"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
pytest = "^8.3.3"
poetry-plugin-export = "^1.8.0"
poetry2conda = "^0.3.0"
ipykernel = "^6.29.5"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
